--- a/package.json
+++ b/package.json
@@ -2,21 +2,39 @@
   "name": "book-source-rule-parser",
   "version": "1.0.0",
   "description": "书源规则解析器 - 支持 CSS、XPath、JSON、正则、JS 选择器和组合运算规则",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "src",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "prebuild": "rimraf dist",
+    "prepublishOnly": "pnpm run build",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "build": "node build.js",
-    "dev": "node --watch index.js",
+    "dev": "tsx watch index.ts",
     "lint": "eslint src/ --fix",
     "examples": "node examples/run-all.js",
     "example:basic": "node examples/basic-usage.js",
     "example:ecommerce": "node examples/ecommerce-example.js",
     "example:novel": "node examples/novel-example.js",
-    "example:json": "node examples/json-example.js"
+    "example:json": "node examples/json-example.js",
+    "example:ts": "tsx examples/typescript-example.ts"
   },
   "keywords": [
     "book-source",
@@ -32,9 +50,13 @@
   "packageManager": "pnpm@10.16.1",
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/node": "^22.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "eslint": "^9.35.0",
+    "rimraf": "^6.0.0",
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.0",
     "vitest": "^3.2.4"
   },
   "dependencies": {
