--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+.pnpm-store/
+
+# TypeScript
+dist/
+*.tsbuildinfo
 
 # Runtime data
 pids
@@ -92,3 +98,7 @@ logs
 # Build output
 dist/
 build/
+
+# Backup files
+*.backup
+README.md.backup
